GRAD2-2465 - Delete a student and related data